[package]
name = "rust_p2p"
version = "0.1.0"
edition = "2021"


[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.68"
futures = "0.3.28"
libp2p = {version = "0.51.3", features = ["async-std", "gossipsub", "mdns", "dns", "macros", "noise", "ping", "tcp", "websocket", "yamux"] }
libp2p-quic = "0.6.1"
serde = "1.0.163"
tokio = "1.28.2"
